--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "socket.io-client": "^4.6.1"
   },
   "scripts": {
-    "start": "PORT=5000 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
   "devDependencies": {
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.3",
