--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "socket.io-client": "^4.6.1"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
+    "start": "PORT=5000 react-scripts start",
+    "build": "react-scripts build",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
 },
